--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	A:hover { COLOR: blue; TEXT-DECORATION: none; font-weight: none }
 	-->
 	</style>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/brbkjpeybdz5syo/Untitled.html?dl=0">CITY HALL IN PRAGUE</a><br />
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/sttfcgh51yq7b2p/Pastorok_portfolio%20%28dragged%29.pdf?raw=1">CITY HALL IN PRAGUE</a><br />
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/cxuwc4ba1pqrakb/Pastorok_portfolio%20%28dragged%29%201.pdf?raw=1">MINIMAL HOUSE IN PRE&#352;OV</a><br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/hl9bg5swyq9y4c0/Pastorok_portfolio%20%28dragged%29%202.pdf?dl=0">V&#205;T&#282;ZN&#201; SQUARE IN PRAGUE</a><br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/8e1e5jepw73ui8r/Pastorok_portfolio%20%28dragged%29%203.pdf?dl=0">LIBRARY IN FLORENCE</a><br />
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/dmiz8nnsfdmcdf8/Pastorok_portfolio%20%28dragged%29%204.pdf?dl=0">THERMAL BATH IN PRAGUE</a>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/hl9bg5swyq9y4c0/Pastorok_portfolio%20%28dragged%29%202.pdf?raw=1">V&#205;T&#282;ZN&#201; SQUARE IN PRAGUE</a><br />
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/8e1e5jepw73ui8r/Pastorok_portfolio%20%28dragged%29%203.pdf?raw=1">LIBRARY IN FLORENCE</a><br />
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.dropbox.com/s/dmiz8nnsfdmcdf8/Pastorok_portfolio%20%28dragged%29%204.pdf?raw=1">THERMAL BATH IN PRAGUE</a>
 	
 </body>
 </html>
