--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body bgcolor="lightgrey">
 
 	<br/>
-	&nbsp;&nbsp;&nbsp;&nbsp;<font face="Helvetica" size="4">//<a href="https://www.dropbox.com/s/ihk4ogtwfssxyl6/CV.pdf?raw=1">MAT&Uacute;&#352; PASTOROK PORTFOLIO</a><br />
-	<a onmouseover="this.innerHTML = 'matuspastorok@gmail.com'" onmouseout="MAT&Uacute;&#352; PASTOROK PORTFOLIO" href="https://www.dropbox.com/s/ihk4ogtwfssxyl6/CV.pdf?raw=1"</a>
+	&nbsp;&nbsp;&nbsp;&nbsp;<font face="Helvetica" size="4">
+	<a onmouseover="this.innerHTML = 'MATUSPASTOROK@GMAIL.COM'" onmouseout="this.innerHTML = this.getAttribute('alt')" alt="MAT&Uacute;&#352; PASTOROK PORTFOLIO" href="http://www.espn.com/">MAT&Uacute;&#352; PASTOROK PORTFOLIO</a>
 	<p style="line-height:1.5">
 	<font face="Helvetica" size="2">
 	<style type="text/css">
